Move to Java 17, and fix static classes (#3)